--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node and express",
   "main": "app.js",
   "scripts": {
-    "start": "node ./app.js --exec babel-node -e js",
+    "start": "nodemon ./app.js --exec babel-node -e js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.17.5"
   }
 }
