--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "lodash": "^4.17.10"
   }
 }
