--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "morgan": "^1.9.0"
   }
 }
